--- a/views/adminView/salesReport.ejs
+++ b/views/adminView/salesReport.ejs
@@ -49,11 +49,11 @@
     <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
         data-sidebar-position="fixed" data-header-position="fixed">
        <!-- Sidebar Start -->
-    <aside class="left-sidebar">
+       <aside class="left-sidebar">
         <!-- Sidebar scroll-->
         <div>
           <div class="brand-logo d-flex align-items-center justify-content-between">
-            <a href="./Dashboard"class="text-nowrap logo-img">  
+            <a href="./Dashboard" class="text-nowrap logo-img">  
               <img src="/img/ssLOGO.png" width="180" alt="" />
             </a>
             <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
@@ -134,6 +134,16 @@
               </li>
   
               <li class="sidebar-item">
+                <a class="sidebar-link" href="/admin/coupons" aria-expanded="false">
+                  <span>
+                    <i class="fa-solid fa-receipt"></i>
+  
+                  </span>
+                  <span class="hide-menu">Coupons</span>
+                </a>
+              </li>
+  
+              <li class="sidebar-item">
                 <a class="sidebar-link" href="/admin/logout" aria-expanded="false">
                   <span>
                     <i class="fa-solid fa-right-from-bracket"></i>
@@ -154,8 +164,7 @@
         <!-- End Sidebar scroll-->
       </aside>
       <!--  Sidebar End -->
-        </aside>
-        <!--  Sidebar End -->
+        
         <!--  Main wrapper -->
 
         <div class="body-wrapper">
