--- a/views/adminView/orders.ejs
+++ b/views/adminView/orders.ejs
@@ -43,11 +43,11 @@
     <div class="page-wrapper" id="main-wrapper" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
         data-sidebar-position="fixed" data-header-position="fixed">
        <!-- Sidebar Start -->
-    <aside class="left-sidebar">
+       <aside class="left-sidebar">
         <!-- Sidebar scroll-->
         <div>
           <div class="brand-logo d-flex align-items-center justify-content-between">
-            <a href="./Dashboard"class="text-nowrap logo-img">  
+            <a href="./Dashboard" class="text-nowrap logo-img">  
               <img src="/img/ssLOGO.png" width="180" alt="" />
             </a>
             <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
@@ -124,6 +124,16 @@
   
                   </span>
                   <span class="hide-menu">Offers</span>
+                </a>
+              </li>
+  
+              <li class="sidebar-item">
+                <a class="sidebar-link" href="/admin/coupons" aria-expanded="false">
+                  <span>
+                    <i class="fa-solid fa-receipt"></i>
+  
+                  </span>
+                  <span class="hide-menu">Coupons</span>
                 </a>
               </li>
   
