--- a/views/userView/checkout.ejs
+++ b/views/userView/checkout.ejs
@@ -408,7 +408,7 @@
               </div>
 
               <button
-                type="submit"
+                type="button"
                 class="btn btn-primary"
                 onclick="addAddress()"
               >
@@ -811,7 +811,7 @@
           nameerror.textContent = "";
         }
 
-        const cityreg = /^[a-zA-Z]{1,10}$/;
+        const cityreg = /^[a-zA-Z]{1,20}$/;
         if (!cityreg.test(City.trim())) {
           cityerror.textContent = "Invalid input";
           return false;
@@ -819,7 +819,7 @@
           cityerror.textContent = "";
         }
 
-        const statereg = /^[a-zA-Z]{1,10}$/;
+        const statereg = /^[a-zA-Z]{1,20}$/;
         if (!statereg.test(State.trim())) {
           stateerror.textContent = "Invalid input";
           return false;
@@ -862,6 +862,9 @@
               const msg = document.getElementById("addressmsg");
               msg.innerText = "Address Added";
               msg.style.color = "green";
+              setTimeout(() => {
+                location.reload()
+              }, 1000);
             } else {
               const msg = document.getElementById("addressmsg");
               msg.innerText = "Some thing Wrong";
