--- a/views/userView/home.ejs
+++ b/views/userView/home.ejs
@@ -102,23 +102,18 @@
 
     <!-- Hero Section Begin -->
     <section class="hero">
-        <div class="hero__slider owl-carousel">
-            <div class="hero__items set-bg" data-setbg="img/hero/soul.1.webp">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
+        <div class="container">
+            <div class="row">
+                <div class="col-xl-5 col-lg-7 col-md-8">
+                    <div class="hero__slider owl-carousel">
+                        <div class="hero__items set-bg" data-setbg="img/hero/soul.1.webp">
                             <div class="hero__text">
+                                <!-- Content for first slide -->
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="hero__items set-bg" data-setbg="/img/hero/soul.2.png">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-xl-5 col-lg-7 col-md-8">
+                        <div class="hero__items set-bg" data-setbg="/img/hero/soul.2.png">
                             <div class="hero__text">
-                               
+                                <!-- Content for second slide -->
                             </div>
                         </div>
                     </div>
@@ -126,6 +121,7 @@
             </div>
         </div>
     </section>
+    
     <!-- Hero Section End -->
 
     
