--- a/views/adminView/coupon.ejs
+++ b/views/adminView/coupon.ejs
@@ -123,7 +123,7 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="/admin/offers" aria-expanded="false">
                 <span>
-                  <i class="fas fa-tags"></i>
+                  <i class="fa fa-tags"></i>
 
                 </span>
                 <span class="hide-menu">Offers</span>
