--- a/views/userView/cart.ejs
+++ b/views/userView/cart.ejs
@@ -237,7 +237,8 @@
                               </h5>
                             </div>
                           </td>
-                          <td class="quantity__item">
+                          <td
+                           class="quantity__item">
                             <div class="quantity-control d-flex">
                               <button class="btn btn-outline-secondary mr-1 quantity-btn" data-action="decrease"
                                 data-product-id="<%= item.productId._id %>">
