Refferel Details Page Not finished

--- a/views/adminView/editProduct.ejs
+++ b/views/adminView/editProduct.ejs
@@ -276,7 +276,7 @@
 
                     <div class="form-group mt-2">
                       <label for="img">Product Image:</label>
-                      <input type="file" class="images form-control-file" id="imageFiles" name="files"  multiple >
+                      <input type="file" class="images form-control-file" id="imageFiles" name="files" accept="image/*"  multiple >
                     </div>
                     <span id="fileErr" class="errMsg"></span>
                      <br>
