--- a/views/adminView/Dashboard.ejs
+++ b/views/adminView/Dashboard.ejs
@@ -67,7 +67,7 @@
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
-                <span class="hide-menu">Dashboard</span>
+                <span class="hide-menu">DASHBOARD</span>
               </a>
             </li>
 
@@ -122,7 +122,7 @@
                   <i class="fas fa-tags"></i>
 
                 </span>
-                <span class="hide-menu">Offers</span>
+                <span class="hide-menu">OFFERS</span>
               </a>
             </li>
 
@@ -132,7 +132,17 @@
                   <i class="fa-solid fa-receipt"></i>
 
                 </span>
-                <span class="hide-menu">Coupons</span>
+                <span class="hide-menu">COUPONS</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                <span>
+                  <i class="fa-solid fa-link"></i>
+
+                </span>
+                <span class="hide-menu">REFFEREL</span>
               </a>
             </li>
 
