Addmin side bar Updated

--- a/views/adminView/coupon.ejs
+++ b/views/adminView/coupon.ejs
@@ -50,7 +50,7 @@
       <!-- Sidebar scroll-->
       <div>
         <div class="brand-logo d-flex align-items-center justify-content-between">
-          <a href="./Dashboard" class="text-nowrap logo-img">
+          <a href="./Dashboard" class="text-nowrap logo-img">  
             <img src="/img/ssLOGO.png" width="180" alt="" />
           </a>
           <div class="close-btn d-xl-none d-block sidebartoggler cursor-pointer" id="sidebarCollapse">
@@ -71,7 +71,7 @@
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
-                <span class="hide-menu">Dashboard</span>
+                <span class="hide-menu">DASHBOARD</span>
               </a>
             </li>
 
@@ -83,7 +83,7 @@
                 <span class="hide-menu">CUSTOMERS</span>
               </a>
             </li>
-
+ 
             <li class="sidebar-item">
               <a class="sidebar-link" href="/admin/Category" aria-expanded="false">
                 <span>
@@ -123,10 +123,10 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="/admin/offers" aria-expanded="false">
                 <span>
-                  <i class="fa fa-tags"></i>
+                  <i class="fas fa-tags"></i>
 
                 </span>
-                <span class="hide-menu">Offers</span>
+                <span class="hide-menu">OFFERS</span>
               </a>
             </li>
 
@@ -136,7 +136,17 @@
                   <i class="fa-solid fa-receipt"></i>
 
                 </span>
-                <span class="hide-menu">Coupons</span>
+                <span class="hide-menu">COUPONS</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                <span>
+                  <i class="fa-solid fa-link"></i>
+
+                </span>
+                <span class="hide-menu">REFFEREL</span>
               </a>
             </li>
 
@@ -149,12 +159,12 @@
               </a>
             </li>
 
-
-
-
-
+            
+            
+            
+           
           </ul>
-
+        
         </nav>
         <!-- End Sidebar navigation -->
       </div>
