--- a/views/adminView/category.ejs
+++ b/views/adminView/category.ejs
@@ -105,7 +105,7 @@
                   <span>
                     <i class="ti ti-layout-dashboard"></i>
                   </span>
-                  <span class="hide-menu">Dashboard</span>
+                  <span class="hide-menu">DASHBOARD</span>
                 </a>
               </li>
   
@@ -160,7 +160,7 @@
                     <i class="fas fa-tags"></i>
   
                   </span>
-                  <span class="hide-menu">Offers</span>
+                  <span class="hide-menu">OFFERS</span>
                 </a>
               </li>
   
@@ -170,7 +170,17 @@
                     <i class="fa-solid fa-receipt"></i>
   
                   </span>
-                  <span class="hide-menu">Coupons</span>
+                  <span class="hide-menu">COUPONS</span>
+                </a>
+              </li>
+  
+              <li class="sidebar-item">
+                <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                  <span>
+                    <i class="fa-solid fa-link"></i>
+  
+                  </span>
+                  <span class="hide-menu">REFFEREL</span>
                 </a>
               </li>
   
@@ -193,8 +203,6 @@
           <!-- End Sidebar navigation -->
         </div>
         <!-- End Sidebar scroll-->
-      </aside>
-    <!--  Sidebar End -->
       </aside>
       <!--  Sidebar End -->
       <!--  Main wrapper -->
