--- a/views/adminView/customers.ejs
+++ b/views/adminView/customers.ejs
@@ -88,7 +88,7 @@
                   <span>
                     <i class="ti ti-layout-dashboard"></i>
                   </span>
-                  <span class="hide-menu">Dashboard</span>
+                  <span class="hide-menu">DASHBOARD</span>
                 </a>
               </li>
   
@@ -143,7 +143,7 @@
                     <i class="fas fa-tags"></i>
   
                   </span>
-                  <span class="hide-menu">Offers</span>
+                  <span class="hide-menu">OFFERS</span>
                 </a>
               </li>
   
@@ -153,7 +153,17 @@
                     <i class="fa-solid fa-receipt"></i>
   
                   </span>
-                  <span class="hide-menu">Coupons</span>
+                  <span class="hide-menu">COUPONS</span>
+                </a>
+              </li>
+  
+              <li class="sidebar-item">
+                <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                  <span>
+                    <i class="fa-solid fa-link"></i>
+  
+                  </span>
+                  <span class="hide-menu">REFFEREL</span>
                 </a>
               </li>
   
@@ -178,8 +188,7 @@
         <!-- End Sidebar scroll-->
       </aside>
     <!--  Sidebar End -->
-      </aside>
-      <!--  Sidebar End -->
+     
       <!--  Main wrapper -->
       <div class="body-wrapper">
         <!--  Header Start -->
