--- a/views/adminView/editCategory.ejs
+++ b/views/adminView/editCategory.ejs
@@ -94,7 +94,7 @@
                 <span>
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
-                <span class="hide-menu">Dashboard</span>
+                <span class="hide-menu">DASHBOARD</span>
               </a>
             </li>
 
@@ -149,7 +149,27 @@
                   <i class="fas fa-tags"></i>
 
                 </span>
-                <span class="hide-menu">Offers</span>
+                <span class="hide-menu">OFFERS</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/coupons" aria-expanded="false">
+                <span>
+                  <i class="fa-solid fa-receipt"></i>
+
+                </span>
+                <span class="hide-menu">COUPONS</span>
+              </a>
+            </li>
+
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                <span>
+                  <i class="fa-solid fa-link"></i>
+
+                </span>
+                <span class="hide-menu">REFFEREL</span>
               </a>
             </li>
 
@@ -173,8 +193,7 @@
       </div>
       <!-- End Sidebar scroll-->
     </aside>
-    <!--  Sidebar End -->
-    </aside>
+    
     
     <!--  Sidebar End -->
       <!--  Main wrapper -->
