--- a/views/adminView/orders.ejs
+++ b/views/adminView/orders.ejs
@@ -68,7 +68,7 @@
                   <span>
                     <i class="ti ti-layout-dashboard"></i>
                   </span>
-                  <span class="hide-menu">Dashboard</span>
+                  <span class="hide-menu">DASHBOARD</span>
                 </a>
               </li>
   
@@ -123,7 +123,7 @@
                     <i class="fas fa-tags"></i>
   
                   </span>
-                  <span class="hide-menu">Offers</span>
+                  <span class="hide-menu">OFFERS</span>
                 </a>
               </li>
   
@@ -133,7 +133,17 @@
                     <i class="fa-solid fa-receipt"></i>
   
                   </span>
-                  <span class="hide-menu">Coupons</span>
+                  <span class="hide-menu">COUPONS</span>
+                </a>
+              </li>
+  
+              <li class="sidebar-item">
+                <a class="sidebar-link" href="/admin/refference" aria-expanded="false">
+                  <span>
+                    <i class="fa-solid fa-link"></i>
+  
+                  </span>
+                  <span class="hide-menu">REFFEREL</span>
                 </a>
               </li>
   
@@ -157,8 +167,7 @@
         </div>
         <!-- End Sidebar scroll-->
       </aside>
-      <!--  Sidebar End -->
-        </aside>
+      
         <!--  Sidebar End -->
         <!--  Main wrapper -->
         <div class="body-wrapper">
